# il2cpp_sym

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: elf.rs  inspector_metadata.rs  main.rs
