[package]
name = "il2cpp-sym"
version = "0.1.0"
authors = ["StackDoubleFlow <ojaslandge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
elfkit = { path = "../elfkit" }
faerie = "0.16.0"
goblin = "0.3.4"
pbr = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
